# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /api
+basePath: /
 definitions:
   controllers.BoxDetailResponse:
     properties:
@@ -158,6 +158,70 @@ info:
   title: Hollow API
   version: "1.0"
 paths:
+  /api/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: 使用邮箱和密码登录
+      parameters:
+      - description: 登录信息
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      summary: 用户登录
+      tags:
+      - users
+  /api/auth/register:
+    post:
+      consumes:
+      - application/json
+      description: 注册一个新的用户账号
+      parameters:
+      - description: 用户注册信息
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controllers.RegisterResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      summary: 注册新用户
+      tags:
+      - users
   /api/boxes:
     get:
       description: 获取所有已创建的留言盒子列表
@@ -315,70 +379,6 @@ paths:
       summary: 点赞/取消点赞留言
       tags:
       - messages
-  /api/users/login:
-    post:
-      consumes:
-      - application/json
-      description: 使用邮箱和密码登录
-      parameters:
-      - description: 登录信息
-        in: body
-        name: login
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controllers.LoginResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      summary: 用户登录
-      tags:
-      - users
-  /api/users/register:
-    post:
-      consumes:
-      - application/json
-      description: 注册一个新的用户账号
-      parameters:
-      - description: 用户注册信息
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/controllers.RegisterResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/controllers.ErrorResponse'
-      summary: 注册新用户
-      tags:
-      - users
 securityDefinitions:
   Bearer:
     description: Type "Bearer" followed by a space and JWT token.
